--- a/Views/Shared/_LayoutofTuong.cshtml
+++ b/Views/Shared/_LayoutofTuong.cshtml
@@ -91,8 +91,8 @@
                         else
                         {
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                <li class="nav-item">
-                                    <a class="nav-link header-nav-link active" aria-current="page" href="#">
+                                <li class="nav-item" style="border-right:1px solid rgba(0,0,0,.12)">
+                                    <a class="nav-link header-nav-link active" aria-current="page" asp-action="Index" asp-controller="Railway">
                                         <svg width="30" height="30" xmlns="http://www.w3.org/2000/svg">
                                             <g fill="none" fill-rule="evenodd">
                                                 <path d="M0 0h30v30H0z" />
@@ -106,6 +106,26 @@
                                             </g>
                                         </svg>
                                         Trains
+                                    </a>
+                                </li>
+                                <li class="nav-item" style="border-right:1px solid rgba(0,0,0,.12)">
+                                    <a class="nav-link header-nav-link " aria-current="page" asp-action="TrainSeatAvailability" asp-controller="Railway">
+                                        Train Seat 
+                                    </a>
+                                </li>
+                                <li class="nav-item" style="border-right:1px solid rgba(0,0,0,.12)">
+                                    <a class="nav-link header-nav-link " aria-current="page" asp-action="TicketBookingSeach" asp-controller="Railway">
+                                        Ticket PNR
+                                    </a>
+                                </li>
+                                <li class="nav-item" style="border-right:1px solid rgba(0,0,0,.12)">
+                                    <a class="nav-link header-nav-link " aria-current="page" asp-action="TrainRunningSearch" asp-controller="Railway">
+                                        Train Running
+                                    </a>
+                                </li>
+                                <li class="nav-item" >
+                                    <a class="nav-link header-nav-link " aria-current="page" asp-action="StationStatusSearch" asp-controller="Railway">
+                                        Station Schedule
                                     </a>
                                 </li>
                             </ul>                                           
